tests/baselines/reference/parserArrowFunctionExpression9(target=es3).errors.txt
error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
fileJs.js(1,1): error TS2304: Cannot find name 'b'.
fileJs.js(1,6): error TS2304: Cannot find name 'c'.
fileJs.js(1,16): error TS2304: Cannot find name 'e'.
fileTs.ts(1,1): error TS2304: Cannot find name 'b'.
fileTs.ts(1,6): error TS2304: Cannot find name 'c'.
fileTs.ts(1,16): error TS2304: Cannot find name 'e'.


!!! error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
==== fileJs.js (3 errors) ====
    b ? (c) : d => e // Legal JS
    ~
!!! error TS2304: Cannot find name 'b'.
         ~
!!! error TS2304: Cannot find name 'c'.
                   ~
!!! error TS2304: Cannot find name 'e'.
    
==== fileTs.ts (3 errors) ====
    b ? (c) : d => e
    ~
!!! error TS2304: Cannot find name 'b'.
         ~
!!! error TS2304: Cannot find name 'c'.
                   ~
!!! error TS2304: Cannot find name 'e'.
    